--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 ## @Project.Name@ project
-# 
+#
 # Copyright (c) @Date.Year@ @Git.Config{user.name}@
 #
 # Licensed under the BSD 3-Clause license.
@@ -11,7 +11,7 @@
 # an object library for easier management.
 #
 ## Defines
-# 
+#
 # Targets:
 # - "@Project.Target@Sources" INTERFACE
 # - "@Project.Name@::@Project.Target@Sources" ALIAS
@@ -19,13 +19,21 @@
 # - "${${PROJECT_NAME}_TARGET}_SOURCES" = "@Project.Target@Sources"
 
 ## Libray Target ###############################################################
-add_library("@Project.Target@Sources" INTERFACE
-            "${CMAKE_CURRENT_SOURCE_DIR}/dummy.cxx"
+add_library("@Project.Target@Sources" OBJECT
+            "dummy.cxx"
             )
 add_library("@Project.Name@::@Project.Target@Sources" ALIAS "@Project.Target@Sources")
 
 set("${${PROJECT_NAME}_TARGET}_SOURCES" "@Project.Target@Sources")
 set("${${PROJECT_NAME}_TARGET}_SOURCES" "@Project.Target@Sources" PARENT_SCOPE)
+
+target_link_libraries("${${${PROJECT_NAME}_TARGET}_SOURCES}"
+                      PRIVATE
+                      "${${${PROJECT_NAME}_TARGET}_HEADERS}"
+                      "${${${PROJECT_NAME}_TARGET}_SETTINGS}"
+                      @Project.Target@Warnings
+                      @Project.Target@ManaVMtDependencies
+                      )
 
 ## Installation ################################################################
 install(TARGETS "${${${PROJECT_NAME}_TARGET}_SOURCES}"
